# M-UGPP

./: AGENTS.md  README.md  hw_inventory_plan.txt  news_log.jsonl  pyproject.toml
src/m_ugpp/: __init__.py  __main__.py  cli.py  dag.py  engine.py  gpt.py  interfaces.py  roles.py  types.py  web.py
src/m_ugpp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
